--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "devDependencies": {},
   "scripts": {
     "client": "cd client && npm start",
-    "server": "node server.js",
+    "server": "nodemon server.js",
+    "serverProd": "node server.js",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
