--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {},
   "scripts": {
+    "start": "node server.js",
     "client": "cd client && npm start",
     "server": "nodemon server.js",
     "serverProd": "node server.js",
